     highlighting
   * Hidden processes scanner can now detect FUTo
   * Ability to terminate system threads
   * Ability to create services
   * Ability to set DEP status of processes in other sessions
   * Terminator test: TP1a (TP1, alternative method)
   * Terminator test: TT1a (TT1, alternative method)
   * Terminator test: TT4 (dangerous thread termination)
   * Thread wait analysis now detects NtQueryObject hangs
   * Better file object names without KProcessHacker
   * Better IP address resolving
   * Child windows float by default
   * Automatic tree text coloring, allowing for dark highlighting 
     colors
   * Small performance improvements
 * FIXED:
   * #2811733 - "System.NullReferenceException"
   * Broken system thread start addresses due to sign-extending 
     instead of zero-extending pointers
   * Broken Ctrl+A for memory, results, and PE lists
   * Removed several annoying thread-related warnings
   * Network connections now display process IDs
   * Ctrl+C in the log window
   * Window location problem when hiding and restoring the window
   * ObjectDisposedExceptions when closing search options windows
   * "Inject DLL" menu item enabling problem

1.3.8.5
 * NEW/IMPROVED:
   * Full support for Windows Vista SP2
   * Users/sessions list
   * Window process finder
   * Thread wait analysis - right-click a thread and choose 
     Analyze > Wait to see what a thread is hanging on
   * Added ability to create dump files for processes
   * Added ability to detach processes from debuggers
   * Added "scroll down process tree on startup" option
   * Notification icon process list is now sorted
   * Lists are dramatically faster (especially the handle list)
   * Detailed handle properties
   * Event objects can now be modified - set, clear, pulse, reset
   * Event pair objects can now be modified - set high, set low
   * Semaphore objects can now be modified - acquire, release
   * Statistics for token objects